# ledger

./: .clang-format  .clang-tidy  .clangd  .dir-locals.el  .gitignore  .gitmodules  .mcp.json  .rustfmt.toml  .travis.yml  .yamllint  95350193.test  AUTHORS  CLAUDE.md  CMakeLists.txt  COMPLETION_REPORT.md  CONTRIBUTING.md  COPYING  COPYRIGHT  Cargo.toml  DOC-WORK-PLAN.md  Doxyfile  GraphView.h  GraphView.mm  INSTALL.md  Info.plist  JournalController.h  JournalController.mm  JournalDocument.h  JournalDocument.mm  LICENSE  LICENSE.md  LedgerFunctors.h  LedgerFunctors.mm  LedgerInterface.cc  LedgerInterface.h  MWApplication.h  MWApplication.m  Makefile  Makefile.am  Makefile.in  (+217 more)
doc/: CMakeLists.txt  DEVELOP.md  Doxyfile  Doxyfile.in  FAQ.md  GLOSSARY.md  L3-FormatStrings.texi  L3-Introduction.texi  L3-Journal.texi  L3-JournalFormat.texi  L3-Main.texi  L3-Principles.texi  L3-Python.texi  L3-Queries.texi  L3-Reporting.texi  L3-Syntax.texi  L3-ValueExpressions.texi  LICENSE  LICENSE-irrxml  LICENSE-sha1  LICENSE.rtf  Ledger3.texi  LedgerVersion.cmake  Makefile  NEWS  NEWS.md  README  TODO  TODO-OLD  apidoc.css  cleanup.sh  gendocs.sh  grammar.y  ledger-mode.texi  ledger.1  ledger.texi  ledger3.texi  lot-matching.md  mainpage.txt  python-migration.md  (+2 more)
doc/Ledger.scriv/: 222_synopsis.txt  BinderStrings.xml  ExportSettings.xml  binder.scrivproj  info.plist  ui.xml
doc/res/: simple_transaction.txt
examples/: CMakeLists.txt  demo.py
gdtoa/: .gitignore  LICENSE  Makefile.am  Makefile.in  acconf.h.in  aclocal.m4  configure  configure.in  strtodg.c
ledger-cli/: Cargo.toml
ledger-cli/benches/: ledger_benchmarks.rs
ledger-cli/examples/: cli_demo.rs  performance_demo.rs
ledger-cli/src/: cli.rs  completion.rs  dispatch.rs  help.rs  lib.rs  main.rs  session.rs  test_framework.rs
ledger-cli/tests/: cli_tests.rs
ledger-core/: Cargo.toml  build.rs  cbindgen.toml
ledger-core/benches/: amount_bench.rs  balance_bench.rs
ledger-core/docs/: ffi_memory_management.md
ledger-core/examples/: basic_usage.rs  ffi_example.cpp  test_parser.rs
ledger-core/include/: ledger_ffi.h
ledger-core/src/: account.rs  advanced_cache.rs  amount.rs  balance.rs  cache.rs  commodity.rs  data_structures.rs  datetime.rs  ffi.rs  journal.rs  lib.rs  parallel.rs  parser.rs  parser_zero_copy.rs  performance_suite.rs  posting.rs  report.rs  simd_math.rs  strings.rs  transaction.rs  transaction_parser.rs
ledger-core/tests/: integration_test.rs
ledger-math/: Cargo.toml
ledger-math/benches/: precision_bench.rs
ledger-math/src/: amount.rs  balance.rs  commodity.rs  datetime.rs  formatting.rs  lib.rs
ledger-math/tests/: comprehensive_tests.rs  comprehensive_tests.rs.bak  comprehensive_tests.rs.bak10  comprehensive_tests.rs.bak2  comprehensive_tests.rs.bak3  comprehensive_tests.rs.bak4  comprehensive_tests.rs.bak5  comprehensive_tests.rs.bak6  comprehensive_tests.rs.bak7  comprehensive_tests.rs.bak8  comprehensive_tests.rs.bak9  datetime_tests.rs  formatting_tests.rs
ledger-tests/: Cargo.toml
ledger-tests/src/: baseline.rs  comparison.rs  config.rs  discovery.rs  execution.rs  harness.rs  lib.rs  main.rs  reporting.rs
lisp/: CMakeLists.txt  ldg-account.el  ldg-auto.el  ldg-commodities.el  ldg-complete.el  ldg-context.el  ldg-exec.el  ldg-fonts.el  ldg-init.el  ldg-mode.el  ldg-new.el  ldg-occur.el  ldg-post.el  ldg-reconcile.el  ldg-regex.el  ldg-register.el  ldg-report.el  ldg-schedule.el  ldg-sort.el  ldg-state.el  ldg-test.el  ldg-texi.el  ldg-xact.el  ledger-check.el  ledger-commodities.el  ledger-complete.el  ledger-context.el  ledger-exec.el  ledger-fontify.el  ledger-fonts.el  ledger-format.el  ledger-hideshow.el  ledger-init.el  ledger-mode.el  ledger-navigate.el  ledger-occur.el  ledger-post.el  ledger-reconcile.el  ledger-regex.el  ledger-report.el  (+8 more)
parser-test/: Cargo.toml
parser-test/src/: main.rs  simple_test.rs
python/: CMakeLists.txt  __init__.py.in  amounts.cc  demo.py  hello.py  interp.py  py_amount.cc  py_balance.cc  py_balpair.cc  py_chain.cc  py_commodity.cc  py_compare.cc  py_csv.cc  py_emacs.cc  py_entry.cc  py_expr.cc  py_filters.cc  py_flags.cc  py_format.cc  py_global.cc  py_hooks.cc  py_item.cc  py_iterators.cc  py_journal.cc  py_mask.cc  py_op.cc  py_option.cc  py_output.cc  py_parser.cc  py_predicate.cc  py_quotes.cc  py_reconcile.cc  py_report.cc  py_scope.cc  py_session.cc  py_stream.cc  py_textual.cc  py_timelog.cc  py_times.cc  py_token.cc  (+11 more)
python/demo/: __init__.py  __main__.py
python/ledger/: __init__.py
src/: CMakeLists.txt  TODO  abbrev.h  account.cc  account.h  accounts_map.h  accum.cc  accum.h  amount.cc  amount.h  annotate.cc  annotate.h  archive.cc  archive.h  balance.cc  balance.h  balpair.cc  balpair.h  binary.cc  binary.h  builder.h  cache.cc  cache.h  chain.cc  chain.h  commodity.cc  commodity.h  compare.cc  compare.h  compile.cc  compile.h  context.h  convert.cc  convert.h  csv.cc  csv.h  derive.cc  derive.h  document.cc  document.h  (+172 more)
src/data/: builder.h  compile.cc  compile.h  document.cc  document.h  jbuilder.h  journal.cc  journal.h  node.h  parser.h  textual.cc  textual.h
src/driver/: fdstream.hpp  main.cc  report.cc  report.h  session.cc  session.h
src/numerics/: amount.cc  (+7 more)
test/: CMakeLists.txt  CheckBaselineTests.py  CheckComments.py  CheckEnvVars.py  CheckManpage.py  CheckOptions.py  CheckTests.py  CheckTexinfo.py  ConfirmTests.py  DataTests.cc  DocTests.py  ExprTests.cc  GenerateTests.py  LedgerHarness.py  MathTests.cc  PyUnitTests.py  RegressTests.py  UnitTests.cc  UnitTests.h  UnitTests.py  UtilTests.cc  convert.py  extra_tests.cc  fullcheck.sh  parse_tests.cc  prove.sh  regress.py  report_tests.cc  run  runtests.py  snapshot.py
tools/: Makefile.am  average  build  build.sh  buildall  configure.ac  confirm.py  excludes  gendocs.sh  genuuid  mkmondo  myacprep  nix-build.sh  outdir  pre-commit  prepall  prepare-commit-msg  proof  prove.sh  push  regtest  rename.sh  runtests.py  sample.py  sample.sh  speed-test.sh  speedcmp  spellcheck.sh  template.h  times.sh  travis-before_install.sh  travis-install.sh  update_copyright_year.sh
(+5765 files in other folders)
